feat: added all the tags to the html to start the translations

--- a/src/templates/projects/create_assigment.html
+++ b/src/templates/projects/create_assigment.html
@@ -2,6 +2,7 @@
 
 {% load static %}
 
+{% load i18n %}
 {% block app_content %}
 
 <div class="flex justify-center items-center">
@@ -10,21 +11,20 @@
         <form method="post">
             {% csrf_token %}
             <div class="mt-8">
-                <label for="name" class="block text-md font-medium text-primary_black">Nombre del Entregable</label>
+                <label for="name" class="block text-md font-medium text-primary_black">{% translate "Nombre del Entregable" %}</label>
                 <input id="name" name="name" type="text" {% if is_editing %} value="{{assigment.title}}" {% endif%}
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none
                 focus:ring-primary_medium focus:border-primary_medium sm:text-sm" required>
             </div>
             <div class="mt-8">
-                <label for="description" class="block text-md font-medium text-primary_black">Descripcion del
-                    Entregable</label>
+                <label for="description" class="block text-md font-medium text-primary_black">{% translate "Descripcion del Entregable" %}</label>
                 <textarea id="description" name="description" rows="3"
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
                     required>{% if is_editing %}{{assigment.description}}{% endif %}</textarea>
             </div>
 
             <div class="mt-8 w-1/2">
-                <label for="user" class="block text-md font-medium text-primary_black">Usuario encargado</label>
+                <label for="user" class="block text-md font-medium text-primary_black">{% translate "Usuario encargado" %}</label>
 
                 <select name="user" id="user"
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm">
@@ -35,8 +35,7 @@
             </div>
 
             <div class="w-1/2 mt-8">
-                <label for="end_date" class="block text-md font-medium text-primary_black">Fecha de
-                    Finalizacion</label>
+                <label for="end_date" class="block text-md font-medium text-primary_black">{% translate "Fecha de Finalizacion" %}</label>
                 <input name="end_date" type="date" id="end_date" {% if is_editing and assigment.end_date %}
                     value="{{ assigment.end_date|date:'Y-m-d' }}" {% endif %}
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
@@ -49,9 +48,9 @@
                     {% else %}
                     href="/project/edit_milestone/{{milestone.id}}">
                     {% endif %}
-                    <button type="button" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-lg mr-2">Cancelar</button>
+                    <button type="button" class="bg-gray-300 text-gray-800 px-4 py-2 rounded-lg mr-2">{% translate "Cancelar" %}</button>
                 </a>
-                <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg">Guardar</button>
+                <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg">{% translate "Guardar" %}</button>
             </div>
         </form>
     </div>
