--- a/src/templates/projects/project_form.html
+++ b/src/templates/projects/project_form.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
+{% load i18n %}
 {% block content %}
 <div class="container mx-auto px-4 py-12">
     <div class="max-w-2xl mx-auto bg-white rounded-xl shadow-lg p-8 lg:p-10">
-        <h1 class="text-4xl font-extrabold text-gray-900 mb-8 border-b-2 border-gray-200 pb-4">Editar {{ project.title }}</h1>
+        <h1 class="text-4xl font-extrabold text-gray-900 mb-8 border-b-2 border-gray-200 pb-4">{% translate "Editar "%}{{ project.title }}</h1>
         
         <form method="post" class="space-y-6">
             {% csrf_token %}
@@ -23,11 +24,11 @@
             <div class="flex justify-end space-x-4 mt-10">
                 <a href="/project/{{project.id}}/milestone" 
                    class="inline-flex items-center justify-center bg-gray-300 text-gray-700 font-medium px-6 py-3 rounded-lg shadow-md hover:bg-gray-400 transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
-                    Cancelar
+                    {% translate "Cancelar" %}
                 </a>
                 <button type="submit" 
                         class="inline-flex items-center justify-center bg-primary_medium text-white font-medium px-6 py-3 rounded-lg shadow-md hover:bg-primary_dark transition duration-300 ease-in-out transform hover:-translate-y-1 hover:scale-105">
-                    Editar proyecto
+                    {% translate "Editar proyecto" %}
                 </button>
             </div>
         </form>
