--- a/src/templates/projects/calendar.html
+++ b/src/templates/projects/calendar.html
@@ -1,9 +1,10 @@
 {% extends "projects/default_project_view.html" %}
 
+{% load i18n %}
 {% load static %}
 
 {% block section %}
-<h2 class="text-2xl font-bold text-primary_black mb-5">Calendario</h2>
+<h2 class="text-2xl font-bold text-primary_black mb-5">{% translate "Calendario" %}</h2>
 <div id="calendar"></div>
 <!-- Contenedor del calendario -->
 
