--- a/src/templates/projects/create_project.html
+++ b/src/templates/projects/create_project.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}Creación de proyecto{% endblock %}
+{% load i18n %}
+{% block title %}{% translate "Creación de proyecto" %}{% endblock %}
 
 {% block content %}
 <div class="px-20 py-8">
-    <h1 class="text-2xl font-bold text-primary_black mb-2">Creación de proyecto</h1>
-    <h2 class="text-lg text-primary_dark mb-6">Información de los proyectos</h2>
+    <h1 class="text-2xl font-bold text-primary_black mb-2">{% translate "Creación de proyecto" %}</h1>
+    <h2 class="text-lg text-primary_dark mb-6">{% translate "Información de los proyectos" %}</h2>
 
     <form method="post" class="space-y-6 w-full flex justify-center items-center flex-col">
         {% csrf_token %}
@@ -15,23 +16,22 @@
         <div class="items-center justify-center space-y-4 w-1/2">
             <div>
                 <label for="{{ form.title.id_for_label }}"
-                    class="block text-sm font-medium text-primary_black mb-1">Ingresa
-                    el nombre del proyecto <span class="text-red-600">*</span></label>
+                    class="block text-sm font-medium text-primary_black mb-1">{% translate "Ingresa el nombre del proyecto" %} <span class="text-red-600">*</span></label>
                 {{ form.title}}
                 {{ form.title.errors }}
             </div>
 
             <div>
                 <label for="{{ form.description.id_for_label }}"
-                    class="block text-sm font-medium text-primary_black mb-1">Especificaciones del proyecto
-                    <span class="text-red-600">*</span></label>
+                    class="block text-sm font-medium text-primary_black mb-1">{% translate "Especificaciones del proyecto" %}
+                    <span class="text-red-600">*</span>
                 {{ form.description }}
                 {{ form.description.errors }}
             </div>
 
             <div>
                 <label for="{{ form.requirements.id_for_label }}"
-                    class="block text-sm font-medium text-primary_black mb-1">Requerimientos del proyecto <span
+                    class="block text-sm font-medium text-primary_black mb-1">{% translate "Requerimientos del proyecto" %} <span
                         class="text-red-600">*</span></label>
                 {{ form.requirements }}
                 {{ form.requirements.errors }}
@@ -39,24 +39,21 @@
 
             <div>
                 <label for="{{ form.budget.id_for_label }}"
-                    class="block text-sm font-medium text-primary_black mb-1">Presupuesto del proyecto <span
-                        class="text-red-600">*</span></label>
+                    class="block text-sm font-medium text-primary_black mb-1">{% translate "Presupuesto del proyecto" %}
+                    <span class="text-red-600">*</span></label>
                 {{ form.budget }}
                 {{ form.budget.errors }}
             </div>
             <div class="flex justify-between">
                 <div>
                     <label for="{{ form.start_date.id_for_label }}"
-                        class=" w-1/2 text-sm font-medium text-primary_black mb-1">Fecha
-                        de
-                        inicio:</label>
+                        class=" w-1/2 text-sm font-medium text-primary_black mb-1">{% translate "Fecha de inicio:" %}</label>
                     {{ form.start_date }}
                     {{ form.start_date.errors }}
                 </div>
                 <div>
                     <label for="{{ form.end_date.id_for_label }}"
-                        class=" w-1/2 text-sm font-medium text-primary_black mb-1">Fecha de
-                        finalización:</label>
+                        class=" w-1/2 text-sm font-medium text-primary_black mb-1">{% translate "Fecha de finalización:" %}</label>
                     {{ form.end_date }}
                     {{ form.end_date.errors }}
                 </div>
@@ -65,7 +62,7 @@
         <div class="flex justify-center items-center">
             <button type="submit"
                 class=" bg-primary_medium text-white font-semibold px-5 py-3 rounded-md hover:bg-primary_light focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2">
-                Confirmar
+                {% translate "Confirmar" %}
             </button>
 
     </form>
