--- a/src/templates/projects/edit_description.html
+++ b/src/templates/projects/edit_description.html
@@ -1,13 +1,14 @@
 <!-- templates/tasks/edit_description.html -->
 {% extends "base.html" %}
 
+{% load i18n %}
 {% block content %}
 <div class="container mx-auto mt-10">
-    <h2 class="text-2xl font-bold text-primary_black">Editar Descripción</h2>
+    <h2 class="text-2xl font-bold text-primary_black">{% translate "Editar Descripción" %}</h2>
     <form method="POST" action="{% url 'edit_description' description.id %}" class="mt-4">
         {% csrf_token %}
         <textarea name="content" class="w-full border p-2 rounded" required>{{ description.content }}</textarea>
-        <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg mt-2">Guardar Cambios</button>
+        <button type="submit" class="bg-primary_medium text-white px-4 py-2 rounded-lg mt-2">{% translate "Guardar Cambios" %}</button>
     </form>
 </div>
 {% endblock %}
