--- a/src/templates/projects/manage_milestone.html
+++ b/src/templates/projects/manage_milestone.html
@@ -1,6 +1,7 @@
 {% extends "navigation/navigation.html" %}
 
 
+{% load i18n %}
 {% load static %}
 {% block app_content %}
 {{ project_id|json_script:"project-id" }}
@@ -12,9 +13,9 @@
         <div class="flex justify-between">
             <h3 class="text-lg font-semibold text-primary_black">
                 {% if is_editing %}
-                Editar Hito
+                {% translate "Editar Hito" %}
                 {% else %}
-                Añadir Hito
+                {% translate "Añadir Hito" %}
                 {% endif %}
             </h3>
 
@@ -37,7 +38,7 @@
             <div id="delete_confirmation"
                 class="fixed inset-0 flex items-center justify-center bg-black bg-opacity-50 hidden z-50">
                 <div class="bg-white rounded-lg p-4 w-80">
-                    <h3 class="text-lg mb-4">¿Estás seguro de borrar la tarea `{{milestone.name}}`?</h3>
+                    <h3 class="text-lg mb-4">{% translate "¿Estás seguro de borrar la tarea `{{milestone.name}}`?" %}</h3>
                     <div class="flex justify-end">
                         <button id="confirm-button"
                             class="bg-red-600 text-white px-4 py-2 rounded-lg">Confirmar</button>
@@ -57,7 +58,7 @@
                     required>
             </div>
             <div class="mt-8">
-                <label for="description" class="block text-md font-medium text-primary_black">Descripción</label>
+                <label for="description" class="block text-md font-medium text-primary_black">{% translate "Descripción" %}</label>
                 <textarea id="description" name="description" rows="3"
                     class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
                     required>{% if is_editing %}{{milestone.description}} {% endif %}</textarea>
@@ -66,8 +67,7 @@
             <div class="flex justify-between space-x-40 mt-8">
 
                 <div class="w-1/2">
-                    <label for="end_date" class="block text-md font-medium text-primary_black">Fecha de
-                        Finalizacion</label>
+                    <label for="end_date" class="block text-md font-medium text-primary_black">{% translate "Fecha de Finalizacion" %}</label>
                     <input name="end_date" type="date" id="end_date" {% if is_editing and milestone.end_date %}
                         value="{{ milestone.end_date|date:'Y-m-d' }}" {% endif %}
                         class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
@@ -77,7 +77,7 @@
 
                 {% if is_editing %}
                 <div class="w-1/2">
-                    <label for="start_date" class="block text-md font-medium text-primary_black">Fecha de Inicio</label>
+                    <label for="start_date" class="block text-md font-medium text-primary_black">{% translate "Fecha de Inicio" %}</label>
                     <input name="start_date" type="date" {% if is_editing and milestone.end_date %}
                         value="{{ milestone.start_date|date:'Y-m-d' }}" {%endif %}
                         class="mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-primary_medium focus:border-primary_medium sm:text-sm"
