--- a/src/templates/projects/milestones.html
+++ b/src/templates/projects/milestones.html
@@ -1,12 +1,13 @@
 {% extends "projects/default_project_view.html" %}
 
+{% load i18n %}
 {% block section %}
 
 <div>
 
     <!-- Hitos Section -->
     <div class="flex justify-between items-center">
-        <h2 class="text-2xl font-bold text-primary_black">Hitos</h2>
+        <h2 class="text-2xl font-bold text-primary_black">{% translate "Hitos" %}</h2>
 
         {% url 'add_milestone' project.id as add_milestone_url %}
         {% include 'utils/anchor_button.html' with type=1 label='Añadir' url=add_milestone_url %}
@@ -19,10 +20,9 @@
             <div class="w-full {{ milestone.deadline_color }} p-1"></div>
 
             <h3 class="text-lg font-semibold text-primary_black">{{ milestone.name }}</h3>
-            <p class="text-sm text-primary_medium">Fecha de Inicio: {{ milestone.start_date }}</p>
-            <p class="text-sm text-primary_medium">Fecha de Finalización: {{ milestone.end_date }}</p>
-            <span class="text-sm text-primary_dark block">Entregables: 
-                <span class="block text-black mt-2">{{ milestone.amount_completed }} / {{ milestone.assigments.count }}</span>
+            <p class="text-sm text-primary_medium">{% translate "Fecha de Inicio: "%}{{ milestone.start_date }}</p>
+            <p class="text-sm text-primary_medium">{% translate "Fecha de Finalización: "%}{{ milestone.end_date }}</p>
+            <span class="text-sm text-primary_dark block">{% translate "Entregables:" %} <span class="block text-black mt-2">{{ milestone.amount_completed }} / {{ milestone.assigments.count }}</span>
             </span>
             <div class="mt-10">
                 {% url 'edit_milestone' milestone.id as milestone_edit_url %}
