--- a/src/templates/projects/tasks.html
+++ b/src/templates/projects/tasks.html
@@ -1,5 +1,6 @@
 {% extends "projects/default_project_view.html" %}
 
+{% load i18n %}
 {% block section %}
 <div class="container mx-auto px-4 py-8">
   <div class="flex justify-between items-center mb-8">
@@ -22,26 +23,26 @@
         <div class="bg-bg_white rounded-lg shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-lg">
           <div class="w-full {{ task.deadline_color }} h-2"></div>
           <div class="p-6 space-y-4">
-            <div class="text-sm font-medium text-primary_medium">Hito: {{ task.milestone.name }}</div>
+            <div class="text-sm font-medium text-primary_medium">{% translate "Hito: "%}{{ task.milestone.name }}</div>
             <h3 class="text-lg font-semibold text-primary_black">{{ task.title }}</h3>
             <div class="flex items-center text-sm text-primary_medium">
               <svg class="w-4 h-4 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"></path>
               </svg>
-              Asignado a: {{ task.responsible.username }}
+              {% translate "Asignado a:"%} {{ task.responsible.username }}
             </div>
             <div class="flex justify-between text-sm text-primary_medium">
-              <span>Inicio: {{ task.start_date|date:"d M Y" }}</span>
-              <span>Fin: {{ task.end_date|date:"d M Y" }}</span>
+              <span>{% translate "Inicio: "%}{{ task.start_date|date:"d M Y" }}</span>
+              <span>{% translate "Fin: "%}{{ task.end_date|date:"d M Y" }}</span>
             </div>
             <p class="text-sm text-primary_medium">{{ task.description|truncatewords:30 }}</p>
             <div class="inline-block px-3 py-1 text-xs font-semibold text-bg_white bg-primary_medium rounded-full">
-              La prioridad es: {{ task.priority }}
+              {% translate "La prioridad es:"%} {{ task.priority }}
             </div>
 
             <!-- Additional Descriptions Section -->
             <div class="space-y-4">
-              <h4 class="font-semibold text-primary_black">Descripciones Adicionales</h4>
+              <h4 class="font-semibold text-primary_black">{% translate "Descripciones Adicionales" %}</h4>
               <ul class="space-y-2">
                 {% for description in task.descriptions.all %}
                   <li class="border-t border-primary_medium/20 pt-2">
@@ -55,7 +56,7 @@
                     {% endif %}
                   </li>
                 {% empty %}
-                  <li class="text-sm text-primary_medium">No hay descripciones adicionales aún.</li>
+                  <li class="text-sm text-primary_medium">{% translate "No hay descripciones adicionales aún." %}</li>
                 {% endfor %}
               </ul>
 
@@ -68,7 +69,7 @@
 
             <!-- Files Section -->
             <div class="space-y-4">
-              <h4 class="font-semibold text-primary_black">Archivos</h4>
+              <h4 class="font-semibold text-primary_black">{% translate "Archivos" %}</h4>
               <ul class="space-y-2">
                 {% for file in task.files.all %}
                   <li class="flex items-center space-x-2">
@@ -78,7 +79,7 @@
                     <a href="{{ file.file.url }}" class="text-sm text-primary_medium hover:underline" target="_blank">{{ file.file.name }}</a>
                   </li>
                 {% empty %}
-                  <li class="text-sm text-primary_medium">No hay archivos aún.</li>
+                  <li class="text-sm text-primary_medium">{% translate "No hay archivos aún." %}</li>
                 {% endfor %}
               </ul>
 
@@ -91,7 +92,7 @@
 
             <!-- Comments Section -->
             <div class="space-y-4">
-              <h4 class="font-semibold text-primary_black">Comentarios</h4>
+              <h4 class="font-semibold text-primary_black">{% translate "Comentarios" %}</h4>
               <ul class="space-y-2">
                 {% for comment in task.comments.all %}
                   <li class="border-t border-primary_medium/20 pt-2">
@@ -102,7 +103,7 @@
                     <p class="text-sm text-primary_medium mt-1">{{ comment.content }}</p>
                   </li>
                 {% empty %}
-                  <li class="text-sm text-primary_medium">No hay comentarios aún.</li>
+                  <li class="text-sm text-primary_medium">{% translate "No hay comentarios aún." %}</li>
                 {% endfor %}
               </ul>
 
