--- a/src/templates/projects/upload_assigment_file.html
+++ b/src/templates/projects/upload_assigment_file.html
@@ -1,20 +1,21 @@
 {% extends 'navigation/navigation.html' %}
 
+{% load i18n %}
 {% block app_content %}
 <div class="flex items-center justify-center min-h-screen bg-gray-100">
     <div class="w-full max-w-md p-8 space-y-6 bg-white rounded-lg shadow-md">
-        <h2 class="text-2xl font-bold text-center text-gray-800">Subir Entregable para {{ assigment.title }}</h2>
+        <h2 class="text-2xl font-bold text-center text-gray-800">{% translate "Subir Entregable para "%}{{ assigment.title }}</h2>
         <form method="post" enctype="multipart/form-data" class="space-y-4">
             {% csrf_token %}
             <div class="flex flex-col space-y-2">
-                <label for="entregable" class="text-sm font-medium text-gray-700">Seleccionar archivo:</label>
+                <label for="entregable" class="text-sm font-medium text-gray-700">{% translate "Seleccionar archivo:" %}</label>
                 <input type="file" name="entregable" required
                     class="px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-light">
             </div>
             <div class="flex">
                 <button type="submit"
                     class="w-full px-4 py-2 text-white bg-primary_medium hover:bg-primary-light/90 rounded-md transition duration-300 ease-in-out">
-                    Subir Entregable
+                    {% translate "Subir Entregable" %}
                 </button>
 
                 <a href="javascript:history.back()"
