feat: added more translations to templates

--- a/src/templates/homepage/bottom_bar.html
+++ b/src/templates/homepage/bottom_bar.html
@@ -48,10 +48,10 @@
     <div class="footer">
         <!-- Parte izquierda: Enlaces -->
         <div class="footer-links">
-            <a href="#">Términos de servicio</a>
-            <a href="#">Política de privacidad</a>
-            <a href="#">Sobre nosotros</a>
-            <a href="#">Configuración</a>
+            <a href="#">{% translate "Términos de servicio" %}</a>
+            <a href="#">{% translate "Política de privacidad" %}</a>
+            <a href="#">{% translate "Sobre nosotros" %}</a>
+            <a href="#">{% translate "Configuración" %}</a>
         </div>
 
         <!-- Parte derecha: Selector de idioma -->
