--- a/src/templates/navigation/choose_path.html
+++ b/src/templates/navigation/choose_path.html
@@ -44,7 +44,7 @@
 
                 </div>
             </div>
-            <h2 class="text-lg font-semibold text-primary_medium">Cliente</h2>
+            <h2 class="text-lg font-semibold text-primary_medium">{% translate "Cliente" %}</h2>
             <p class="text-primary_black mt-2">
                 {% translate "Encuentra el talento perfecto para impulsar tus proyectos." %}
             </p>
