--- a/src/templates/navigation/search_filters.html
+++ b/src/templates/navigation/search_filters.html
@@ -74,8 +74,8 @@
     <!-- Filtro de presupuesto -->
     <div class="flex flex-col">
         <span class="text-gray-600 text-sm mb-1">{% translate "Presupuesto" %}</span>
-        <input type="number" name="min_budget" class="border border-gray-300 rounded-lg p-2 mb-2" placeholder="Mínimo (USD)">
-        <input type="number" name="max_budget" class="border border-gray-300 rounded-lg p-2" placeholder="Máximo (USD)">
+        <input type="number" name="min_budget" class="border border-gray-300 rounded-lg p-2 mb-2" placeholder="{% translate "Mínimo (USD)" %}">
+        <input type="number" name="max_budget" class="border border-gray-300 rounded-lg p-2" placeholder="{% translate "Máximo (USD)"%}">
     </div>
 
     <!-- Botón de filtro -->
